[package]
name = "mite"
version = "0.1.0"
edition = "2021"
authors = ["John Caleb calebjohn3112@gmail.com"]
description = "A command-line tool for searching words in files."
repository = "https://github.com/thejohncaleb/mite"
keywords = ["CLI", "search", "file"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }